--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "cinema_backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "DanDaw",
   "license": "ISC",
